[gd_scene load_steps=11 format=3 uid="uid://yom6ll844apd"]

[ext_resource type="Script" path="res://assets/projectiles/laser/laser.gd" id="1_7nkna"]
[ext_resource type="Texture2D" uid="uid://bc2pbnu76vtrn" path="res://resources/galaxy_defiance/assets/laser_small.png" id="1_87uba"]
[ext_resource type="Script" path="res://addons/sprite_mesh/sprite_mesh_instance.gd" id="2_giw17"]
[ext_resource type="Script" path="res://addons/sprite_mesh/sprite_mesh.gd" id="3_25lnv"]
[ext_resource type="Script" path="res://assets/components/move_component.gd" id="4_mugia"]
[ext_resource type="Script" path="res://assets/components/scale_component.gd" id="6_xy2yi"]
[ext_resource type="Script" path="res://assets/components/flash_component.gd" id="7_pikk7"]

[sub_resource type="ArrayMesh" id="ArrayMesh_jovsf"]
_surfaces = [{
"aabb": AABB(-0.15, -0.5, -0.05, 0.3, 0.80001, 0.10001),
"attribute_data": PackedByteArray(37, 73, 146, 62, 0, 0, 160, 62, 110, 219, 54, 63, 0, 0, 160, 62, 110, 219, 54, 63, 0, 0, 64, 63, 37, 73, 146, 62, 0, 0, 160, 62, 110, 219, 54, 63, 0, 0, 64, 63, 37, 73, 146, 62, 0, 0, 64, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 110, 219, 54, 63, 0, 0, 160, 62, 37, 73, 146, 62, 0, 0, 160, 62, 37, 73, 146, 62, 0, 0, 64, 63, 110, 219, 54, 63, 0, 0, 64, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 110, 219, 182, 62, 0, 0, 160, 62, 110, 219, 182, 62, 0, 0, 160, 62, 110, 219, 182, 62, 0, 0, 64, 63, 110, 219, 182, 62, 0, 0, 64, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 73, 146, 36, 63, 0, 0, 160, 62, 73, 146, 36, 63, 0, 0, 160, 62, 73, 146, 36, 63, 0, 0, 64, 63, 73, 146, 36, 63, 0, 0, 64, 63, 37, 73, 146, 62, 0, 0, 176, 62, 110, 219, 54, 63, 0, 0, 176, 62, 110, 219, 54, 63, 0, 0, 176, 62, 37, 73, 146, 62, 0, 0, 176, 62, 110, 219, 182, 62, 0, 0, 56, 63, 110, 219, 182, 62, 0, 0, 56, 63, 110, 219, 182, 62, 0, 0, 56, 63, 110, 219, 182, 62, 0, 0, 56, 63, 73, 146, 36, 63, 0, 0, 56, 63, 73, 146, 36, 63, 0, 0, 56, 63, 73, 146, 36, 63, 0, 0, 56, 63, 73, 146, 36, 63, 0, 0, 56, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63, 0, 0, 0, 63, 0, 0, 72, 63),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 48, 0, 50, 0, 51, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 52,
"vertex_data": PackedByteArray(154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 61, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 61, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 61, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 189, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 189, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 189, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 61, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 189, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 189, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 61, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 189, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 189, 154, 153, 25, 62, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 190, 154, 153, 153, 62, 205, 204, 76, 61, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 61, 205, 204, 76, 189, 205, 204, 204, 190, 205, 204, 76, 189, 154, 153, 25, 190, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 61, 154, 153, 25, 62, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 61, 205, 204, 204, 190, 205, 204, 76, 189, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 61, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 61, 205, 204, 76, 61, 0, 0, 0, 191, 205, 204, 76, 189, 205, 204, 76, 189, 0, 0, 0, 191, 205, 204, 76, 189, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 127, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191)
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m7nbl"]
albedo_texture = ExtResource("1_87uba")
texture_filter = 0

[sub_resource type="Resource" id="Resource_285ms"]
script = ExtResource("3_25lnv")
meshes = Array[ArrayMesh]([SubResource("ArrayMesh_jovsf")])
material = SubResource("StandardMaterial3D_m7nbl")

[node name="Laser" type="Node3D"]
script = ExtResource("1_7nkna")

[node name="SpriteMeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
mesh = SubResource("ArrayMesh_jovsf")
surface_material_override/0 = SubResource("StandardMaterial3D_m7nbl")
script = ExtResource("2_giw17")
texture = ExtResource("1_87uba")
pixel_size = 0.1
region_rect = Rect2i(0, 0, 1, 1)
generated_sprite_mesh = SubResource("Resource_285ms")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_mugia")
actor = NodePath("..")
velocity = Vector3(0, 0, -20)

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_xy2yi")
sprite = NodePath("../SpriteMeshInstance")
scale_amount = Vector3(2, 2, 2)
scale_duration = 1.0

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_pikk7")
sprite = NodePath("../SpriteMeshInstance")
flash_duration = 0.1
